commit tree 3389e03f2f5a7073ea01c2a4bad7087a48099ac6

--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,10 @@ ul {
   transition: 0.75s;
   opacity: 1;
 }
-
+.pigTile img {
+  height:250px;
+  width:250px;
+}
 .minBackgroundSneak {
   position: absolute;
   width: inherit;
